@@ -146,7 +146,10 @@ namespace libtorrent
 
 			// the error occurred while loading the .torrent file via the user
 			// supplied load function
-			error_file_metadata = -4
+			error_file_metadata = -4,
+
+			// the error occurred with the partfile
+			error_file_partfile = -5
 		};
 
 		// the path to the directory where this torrent's files are stored.
