@@ -30,8 +30,8 @@ POSSIBILITY OF SUCH DAMAGE.
 
 */
 
-#ifndef TORRENT_CREATE_TORRENT_HPP_INCLUDED
-#define TORRENT_CREATE_TORRENT_HPP_INCLUDED
+#ifndef TORRENT_SIM_CREATE_TORRENT_HPP_INCLUDED
+#define TORRENT_SIM_CREATE_TORRENT_HPP_INCLUDED
 
 #include <string>
 #include "libtorrent/add_torrent_params.hpp"
