@@ -244,7 +244,7 @@ namespace libtorrent
 
 			if (file_index < int(m_storage.m_file_priority.size())
 				&& m_storage.m_file_priority[file_index] == 0
-				&& m_storage.m_use_part_file)
+				&& m_storage.use_partfile(file_index))
 			{
 				TORRENT_ASSERT(m_storage.m_part_file);
 
@@ -335,7 +335,7 @@ namespace libtorrent
 
 			if (file_index < int(m_storage.m_file_priority.size())
 				&& m_storage.m_file_priority[file_index] == 0
-				&& m_storage.m_use_part_file)
+				&& m_storage.use_partfile(file_index))
 			{
 				TORRENT_ASSERT(m_storage.m_part_file);
 
@@ -403,7 +403,6 @@ namespace libtorrent
 
 	default_storage::default_storage(storage_params const& params)
 		: m_files(*params.files)
-		, m_use_part_file(true)
 		, m_pool(*params.pool)
 		, m_allocate_files(params.mode == storage_mode_allocate)
 	{
@@ -417,12 +416,27 @@ namespace libtorrent
 			: params.files->name()) + ".parts";
 
 		file_storage const& fs = files();
+
+		// if some files have priority 0, we need to check if they exist on the
+		// filesystem, in which case we won't use a partfile for them.
+		// this is to be backwards compatible with previous versions of
+		// libtorrent, when part files were not supported.
 		for (int i = 0; i < m_file_priority.size(); ++i)
 		{
-			if (m_file_priority[i] == 0 && !fs.pad_file_at(i))
+			if (m_file_priority[i] != 0 || fs.pad_file_at(i))
+				continue;
+
+			file_status s;
+			std::string const file_path = files().file_path(i, m_save_path);
+			error_code ec;
+			stat_file(file_path, &s, ec);
+			if (!ec)
+			{
+				use_partfile(i, false);
+			}
+			else
 			{
 				need_partfile();
-				break;
 			}
 		}
 	}
@@ -456,22 +470,31 @@ namespace libtorrent
 		file_storage const& fs = files();
 		for (int i = 0; i < int(prio.size()); ++i)
 		{
+			// pad files always have priority 0.
+			if (fs.pad_file_at(i)) continue;
+
 			int old_prio = m_file_priority[i];
 			int new_prio = prio[i];
 			if (old_prio == 0 && new_prio != 0)
 			{
 				// move stuff out of the part file
 				file_handle f = open_file(i, file::read_write, ec);
-				if (ec) return;
-
-				need_partfile();
-
-				m_part_file->export_file(*f, fs.file_offset(i), fs.file_size(i), ec.ec);
 				if (ec)
 				{
 					ec.file = i;
-					ec.operation = storage_error::partfile_write;
+					ec.operation = storage_error::open;
 					return;
+				}
+
+				if (m_part_file)
+				{
+					m_part_file->export_file(*f, fs.file_offset(i), fs.file_size(i), ec.ec);
+					if (ec)
+					{
+						ec.file = i;
+						ec.operation = storage_error::partfile_write;
+						return;
+					}
 				}
 			}
 			else if (old_prio != 0 && new_prio == 0)
@@ -512,15 +535,30 @@ namespace libtorrent
 			ec.ec.clear();
 			m_file_priority[i] = new_prio;
 
-			if (m_file_priority[i] == 0 && !fs.pad_file_at(i))
+			if (m_file_priority[i] == 0 && use_partfile(i))
+			{
 				need_partfile();
+			}
 		}
 		if (m_part_file) m_part_file->flush_metadata(ec.ec);
 		if (ec)
 		{
-			ec.file = -1;
+			ec.file = torrent_status::error_file_partfile;
 			ec.operation = storage_error::partfile_write;
 		}
+	}
+
+	bool default_storage::use_partfile(int const index)
+	{
+		TORRENT_ASSERT_VAL(index >= 0, index);
+		if (index >= int(m_use_partfile.size())) return true;
+		return m_use_partfile[index];
+	}
+
+	void default_storage::use_partfile(int const index, bool const b)
+	{
+		if (index >= int(m_use_partfile.size())) m_use_partfile.resize(index + 1, true);
+		m_use_partfile[index] = b;
 	}
 
 	void default_storage::initialize(storage_error& ec)
@@ -680,7 +718,7 @@ namespace libtorrent
 			ec.ec.clear();
 		if (ec)
 		{
-			ec.file = -1;
+			ec.file = torrent_status::error_file_partfile;
 			ec.operation = storage_error::stat;
 			return false;
 		}
@@ -862,7 +900,7 @@ namespace libtorrent
 				, m_save_path.c_str(), m_part_file_name.c_str(), error.message().c_str());
 			if (error && error != boost::system::errc::no_such_file_or_directory)
 			{
-				ec.file = -1;
+				ec.file = torrent_status::error_file_partfile;
 				ec.ec = error;
 				ec.operation = storage_error::remove;
 			}
@@ -1038,21 +1076,6 @@ namespace libtorrent
 			return false;
 		}
 
-		// if some files have priority 0, we would expect therer to be a part file
-		// as well. If there isn't, it implies we're not using part files and the
-		// original file names are used to store the partial pieces. i.e. 1.0.x
-		// behavior
-		for (int i = 0; i < m_file_priority.size(); ++i)
-		{
-			if (m_file_priority[i] == 0 && !fs.pad_file_at(i))
-			{
-				file_status s;
-				stat_file(combine_path(m_save_path, m_part_file_name), &s, ec.ec);
-				m_use_part_file = !ec;
-				break;
-			}
-		}
-
 		for (int i = 0; i < file_sizes_ent.list_size(); ++i)
 		{
 			if (fs.pad_file_at(i)) continue;
@@ -1065,7 +1088,7 @@ namespace libtorrent
 			// files they belong in.
 			if (i < int(m_file_priority.size())
 				&& m_file_priority[i] == 0
-				&& m_use_part_file)
+				&& use_partfile(i))
 				continue;
 
 			bdecode_node e = file_sizes_ent.list_at(i);
@@ -1323,7 +1346,7 @@ namespace libtorrent
 			if (e)
 			{
 				ec.ec = e;
-				ec.file = -1;
+				ec.file = torrent_status::error_file_partfile;
 				ec.operation = storage_error::partfile_move;
 			}
 		}
