@@ -1,4 +1,6 @@
 
+	* fix backwards compatibility to downloads without partfiles
+	* improve part-file related error messages
 	* fix reporting &redundant= in tracker announces
 	* fix tie-break in duplicate peer connection disconnect logic
 	* fix issue with SSL tracker connections left in CLOSE_WAIT state
